# random-sleep

./: .travis.yml  CHANGELOG.md  LICENSE  Main.hs  README.md  random-sleep.cabal  stack.yaml
.github/workflows/: main.yml
scripts/: control  deploy.sh  package.sh
