cabal-version:       >=1.10
name:                random-sleep
version:             1.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Andrea Condoluci
maintainer:          andreacondoluci@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable rsleep
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
                       , random
                       , process
                       , aeson
                       , HTTP
                       , bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010
